# abyss

./: .env  Cargo.toml  diesel.toml  generate-cert.sh  readme.md  server.crt  server.key  setup-db.sh
i18n/: en.ron  es.ron
migrations/2024-07-29-135540_cartas/: up.sql
migrations/2024-07-29-140306_cartas/: up.sql
migrations/2024-07-29-152326_cartas/: up.sql
migrations/2024-07-29-153208_cartas/: up.sql
migrations/2024-07-29-154318_cartas/: up.sql
migrations/2024-07-29-154744_cartas/: down.sql  up.sql
migrations/2024-07-30-162328_cartas/: down.sql  up.sql
migrations/2024-07-31-152257_cartas/: up.sql
migrations/2024-07-31-152412_users/: up.sql
migrations/2024-08-04-203025_cartas/: up.sql
migrations/2024-08-05-012016_cartas/: up.sql
migrations/2024-08-05-012017_cartas/: up.sql
migrations/2024-08-05-211556_cartas/: up.sql
migrations/2024-08-06-162305_cartas/: up.sql
src/: abyss.rs  consts.rs  database.rs  i18n.rs  main.rs  schema.rs  state.rs  tree.rs
src/components/: certificate.rs  mod.rs  text_input.rs
src/components/pages/: certless.rs  index.rs  mod.rs  terms.rs
src/components/pages/abyss/: delete_carta.rs  fetch_cartas.rs  mod.rs  submit_carta.rs  view_carta.rs  view_cartas.rs  write_carta.rs
src/pages/: mod.rs
