[package]
name = "abyss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
fix_fn = "1.0.2"
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
windmark = "0.3.11"

# fixme: [`chrono::NaiveDateTime`] from postgresql `timestamp`s doesn't work?
# chrono = { version = "0.4.38", default-features = false, features = [
#     "alloc",
#     "now",
#     "std",
#     "serde",
# ] }
